# researchflow

./: .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CLAUDE_UPDATE_CHECKLIST.md  CONTEXT.md  CONTRIBUTING.md  DECISIONS.md  LANGSMITH_KEY_ROTATION_GUIDE.md  LICENSE  LINKEDIN_POST_DRAFT.md  LINKEDIN_POST_FINAL.md  MULTI_PROVIDER_INSTALLATION_COMPLETE.md  MULTI_PROVIDER_SETUP_COMPLETE.md  Makefile  PHASE1_COMPLETE.md  PRE_PUBLICATION_CHECKLIST.md  QUICK_TEST_GUIDE.md  README.md  RESEARCH_NOTEBOOK_IMPROVEMENTS.md  RESTART_AND_TEST.sh  SECURITY.md  SECURITY_SETUP.md  SUMMARY_COUNT_MISMATCH_RESOLUTION.md  TEST_RESULTS_SUMMARY.md  TODOS.md  UI_FIX_TROUBLESHOOTING.md  VIEWDEF_TEST_RESULTS.md  add_params.docx  load_sample_data.py  manual_test.py  multi_provider_test_results_20251024_192503.json  multi_provider_test_results_20251024_193607.json  phase2_test_output.txt  phase2_test_output_v2.txt  (+7 more)
.claude/: architecture.rules  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  markdown-link-check-config.json
.streamlit/: config.toml
app/: main.py
benchmarks/: compare_orchestrators.py  compare_requirements_agent.py
config/: .env.example  Dockerfile  docker-compose.yml  requirements-dev.txt  requirements.txt  rf_readonly_role.sql
data/: test_checkpoints.db-shm  test_checkpoints.db-wal
diagrams/: architecture.puml  components.puml  sequence_flow.puml
docs/: API_EXAMPLES.md  APPROVAL_WORKFLOW_FIX.md  APPROVAL_WORKFLOW_GUIDE.md  ARCHITECTURE_ALIGNMENT_ANALYSIS.md  AUTO_REFRESH_SETUP.md  CIRCULAR_CONVERSATION_FIX.md  DAILY_DEV_WORKFLOW.md  DARK_THEME_FIX.md  DASHBOARD_FIX.md  DASHBOARD_FIX_SUMMARY.md  DEMO_GUIDE.md  DEPENDENCY_ISSUES_FIXED.md  DESIGN_SYSTEM.md  DIAGRAMS_README.md  GAP_ANALYSIS_AND_ROADMAP.md  HIPAA_POSTURE.md  HUMAN_IN_LOOP_ENHANCEMENT_ROADMAP.md  HealthLakeVsResearchFlowComparison.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_COMPARISON.md  LANGCHAIN_EVALUATION.md  LANGGRAPH_MIGRATION_GUIDE.md  LANGSMITH_DASHBOARD_GUIDE.md  LANGSMITH_DIAGRAM_GENERATION_GUIDE.md  LANGSMITH_WORKFLOW_TRACES.md  MATERIALIZED_VIEWS.md  MATERIALIZED_VIEWS_ARCHITECTURE.md  MULTI_PROVIDER_LLM.md  NAVIGATION_AND_THEME_FIX.md  NEXT_STEPS.md  PENDING_APPROVALS_DISPLAY_FIX.md  POSTGRES_RUNNER_IMPLEMENTATION.md  POST_DEPLOYMENT_TESTING_GUIDE.md  PRIORITY_0_TESTS_SUMMARY.md  QUICKSTART_SQL_ON_FHIR.md  QUICK_REFERENCE.md  README.md  REFERENTIAL_INTEGRITY.md  RESEARCHER_PORTAL_TESTING.md  RESEARCHFLOW_README.md  (+18 more)
migrations/: 001_add_preview_fields_to_data_deliveries.sql  001_rollback_preview_fields.sql  README.md  apply_migration.py
scripts/: RESTART_STREAMLIT_APPS.sh  advance_workflow.py  check_claude_md_sync.sh  create_delivery_approval.py  create_materialized_views.py  diagnose_approval_issue.py  diagnose_live_request.py  diagnose_stuck_request.py  dials.sh  drive_fhir_traffic.py  drive_qa_traffic.py  fix_stuck_approval.py  fix_stuck_delivery_approvals.py  init_test_db.py  insert_mock_preview_data.py  lane.sh  list_all_requests.py  load_synthea_to_hapi.py  materialize_views.py  migrate_escalations_table.py  migrate_to_langgraph.py  monitor_workflow.py  parity_verify_a2a_vs_langgraph.py  process_stuck_requests.py  recover_stuck_request.py  refresh_materialized_views.py  remove_emojis.py  restart_apps.sh  seed.sh  sprint_6_5_gate.py  sprint_6_7_gate.py  test_approval_workflow.py  test_complete_workflow.py  test_feasibility_fix.py  test_male_diabetes_sql.py  test_multi_provider.py  test_phenotype_estimates.py  test_research_notebook_workflow.py  test_sql_adapter_params.py  test_sql_generation.py  (+7 more)
tests/: conftest.py  test_admin_dashboard_updates.py  test_admin_delivery_status_ux.py  test_agent_adapter.py  test_agent_comparison.py  test_agent_handoffs.py  test_approval_bridge.py  test_audit_classifier.py  test_audit_drain.py  test_audit_drain_v2.py  test_audit_health.py  test_audit_main_wiring.py  test_dashboard_tabs.py  (+53 more)
(+321 files in other folders)
