[project]
name = "researchflow"
version = "0.1.0"
description = "AI-powered clinical research data automation platform"
requires-python = ">=3.11,<3.13"  # Python 3.11.x only (asyncpg incompatible with 3.13)

[tool.bandit]
exclude_dirs = ["tests", "*/test_*.py", "*_test.py"]
skips = ["B101", "B601", "B608", "B110"]  # B101: assert, B601: paramiko, B608: hardcoded SQL (we use parameterized queries), B110: try/except pass

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
